# othello

./: CHANGELOG.md  LICENSE  README.md  final_game_state.txt  othello.cabal
app/: Main.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
src/: Lib.hs  Types.hs  Utils.hs
